# spinach

./: .gitignore  README.md  bot_commands.py  draw.py  model.py  psql.py  requirements.txt
rag-parsing/: Cargo.toml  config-default.yaml  pyproject.toml
rag-parsing/src/: lib.rs  main.rs  util.rs
