[package]
name = "spinach"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = {version="4.5", features =["derive"]}
dirs = "6.0.0"
pyo3 = {version="0.25.1",features = ["extension-module"]}
sentencepiece = "0.11.3"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
serde_yaml = "0.9"
walkdir = "2.5.0"
fastembed = "4"
reqwest = {version = "0.12.22", features = ["blocking"]}
openssl = "0.10"
chrono = "0.4"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
[lib]
name = "spinach"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "spinach-cli"
path = "src/main.rs"

